xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__count.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#, \"fn:count(descendant::*)\")"
---
Ok(
    OutputSequence {
        items: [
            Atomic(
                Integer(
                    4,
                ),
            ),
        ],
    },
)
