xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__default_last.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(\"<doc/>\", \"fn:last()\")"
---
Ok(
    Sequence {
        items: [
            Atomic(
                Integer(
                    1,
                ),
            ),
        ],
    },
)
