xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__default_last_no_context.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"fn:last()\")"
---
Err(
    SpannedComponentAbsentInDynamicContext {
        src: "fn:last()",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                9,
            ),
        },
    },
)
