xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__default_position.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(\"<doc/>\", \"fn:position()\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Integer(
                    Long,
                    1,
                ),
            ),
        ),
    },
)
