xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__default_position_no_context.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"fn:position()\")"
---
Err(
    XPDY0002 {
        src: "fn:position()",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                13,
            ),
        },
    },
)
