xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__default_position_with_operation.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"fn:position() + 1\")"
---
Err(
    SpannedType {
        src: "fn:position() + 1",
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                17,
            ),
        },
    },
)
