xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__descendant_axis_position.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/><b><c/></b></doc>\"#, \"descendant::* / fn:position()\")"
---
Ok(
    Sequence(
        RefCell {
            value: Sequence {
                items: [
                    Atomic(
                        Integer(
                            1,
                        ),
                    ),
                    Atomic(
                        Integer(
                            2,
                        ),
                    ),
                    Atomic(
                        Integer(
                            3,
                        ),
                    ),
                    Atomic(
                        Integer(
                            4,
                        ),
                    ),
                ],
            },
        },
    ),
)
