xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__element_namespace_wrong.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run_xml(r#\"<doc xmlns=\"http://example.com\"><a/></doc>\"#, \"doc / local-name()\")"
---
Ok(
    [],
)
