xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__empty_sequence.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"()\")"
---
Ok(
    Sequence(
        Sequence(
            RefCell {
                value: InnerSequence {
                    items: [],
                },
            },
        ),
    ),
)
